# lightning_session

./: .env  .gitignore  Dockerfile  README.md  data.dvc  docker-compose.yml  dvc.yaml  eval.py  infer.py  pyproject.toml  requirements.txt  train.py
.devcontainer/: devcontainer.json  docker-compose.yml
.dvc/: config
.github/workflows/: ci.yml  cml.yml
configs/: eval.yaml  infer.yaml  train.yaml
configs/callbacks/: default.yaml
configs/data/: catdog.yaml  dogbreed.yaml
configs/experiment/: catdog_ex.yaml  dogbreed_ex.yaml
configs/loggers/: default.yaml  tensorboard_logger.yaml
configs/model/: timm_classifier.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
datamodules/: dogbreed.py  dogbreed_dataset.py
model/: dogbreed_model.py
scripts/: generate_plots.py
src/: eval.py  infer.py  train.py
src/datamodules/: catdog.py  catdog_dataset.py  dogbreed.py
src/model/: timmclassifier.py
src/utils/: instantiate_utils.py
test/: conftest.py
test/datamodules/: test_datamodules.py
test/model/: test_model.py
test/train/: test_eval.py  test_infer.py  test_train.py
