[project]
name = "lightning-session4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==24.8.0",
    "gdown==5.2.0",
    "hydra-colorlog==1.2.0",
    "hydra-core==1.3.2",
    "lightning==2.4.0",
    "loguru==0.7.2",
    "matplotlib==3.9.2",
    "pytest-cov==5.0.0",
    "pytest==8.3.3",
    "python-dotenv==1.0.1",
    "rich==13.8.1",
    "rootutils==1.0.7",
    "tensorboard==2.18.0",
    "timm==1.0.9",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "torchviz==0.0.2",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "clear>=2.0.0",
]
